# 3p-package-source

./: .gitattributes  .gitignore  .gitmodules  LICENSE.txt  NOTICES.txt  README.md  SPDX-Licenses.csv  SPDX-Licenses.json  SPDX-Licenses.txt  package.bat  package.py  package.sh  package_build_list_host_darwin-arm64.json  package_build_list_host_darwin.json  package_build_list_host_linux-aarch64.json  package_build_list_host_linux.json  package_build_list_host_windows.json  test.sh
.github/workflows/: build-container.yaml  build-package-test.yaml  build-package.yaml  promote-packages.yaml
Scripts/builders/: monkeypatch_tempdir_cleanup.py  vcpkgbuilder.py
Scripts/cmake/: FindPackageName.cmake.in  PackageInfo.json.in  PackageName-config.cmake.in  o3de_package_utilities.cmake  package.cmake
Scripts/extras/: archive_downloader.py  package_downloader.py  patch.py  pull_and_build_from_git.py
Scripts/packaging/: build_all_packages.py  build_package.py  common.py  compare_buckets.py  find_package_on_server.py  list_packages.py  pack_package.py  package.py  upload_all_packages.py
package-system/: .gitignore
package-system/AWSGameLiftServerSDK/: .gitignore  AWSGameLiftServerSDK-3.4.2-linux.patch  AWSGameLiftServerSDK-3.4.2-windows.patch  AWSGameLiftServerSDK_3.4.1.patch  Dockerfile  FindAWSGameLiftServerSDK.cmake.Linux  FindAWSGameLiftServerSDK.cmake.Windows  README.md  aws_gamelift_5.0.0.patch  build-linux.sh  build_and_package.py  build_config.json  build_package_image.py  docker_build_linux.sh  gamelift-sdk.json  install-linux.sh  test-linux.sh
package-system/AWSGameLiftServerSDK/test/: CMakeLists.txt  test_AWSGameLiftServer.cpp
package-system/AWSNativeSDK/: AWSNativeSDK-1.11.288-android.patch  AWSNativeSDK-1.11.344-windows.patch  AWSNativeSDK-1.9.50-android.patch  AWSNativeSDK-1.9.50-ios.patch  AWSNativeSDK-1.9.50-linux-openssl3.patch  AWSNativeSDK-1.9.50-windows.patch  Dockerfile  Dockerfile.ubuntu.2004  Dockerfile.ubuntu.2204  FindAWSNativeSDK.cmake.Android  FindAWSNativeSDK.cmake.Linux  FindAWSNativeSDK.cmake.Mac  FindAWSNativeSDK.cmake.Windows  FindAWSNativeSDK.cmake.Windows.template  FindAWSNativeSDK.cmake.iOS  README.md  build-linux.sh  build_AWSNativeSDK_android.cmd  build_AWSNativeSDK_ios.sh  build_AWSNativeSDK_linux.sh  build_AWSNativeSDK_linux_OpenSSL3.sh  build_AWSNativeSDK_mac.sh  build_AWSNativeSDK_windows.cmd  build_config.json  docker_build_aws_sdk.sh  install-linux.sh  install_AWSNativeSDK_android.cmd  install_AWSNativeSDK_ios.sh  install_AWSNativeSDK_linux.sh  install_AWSNativeSDK_linux_OpenSSL3.sh  install_AWSNativeSDK_mac.sh  install_AWSNativeSDK_windows.cmd
package-system/AwsIotDeviceSdkCpp/: FindAwsIotDeviceSdkCpp.cmake.template  aws-iot-device-sdk-cpp-v2-v1.12.2.patch  aws-iot-device-sdk-cpp-v2-v1.15.2.patch  build_config.json  readme.txt
package-system/Blast/: FindBlast.cmake  build_package_image.py
package-system/Crashpad/: FindCrashpad_linux.cmake.template  FindCrashpad_windows.cmake.template  add_o3de_handler_extensions.patch  build_package_image.py
package-system/DirectXShaderCompiler/: FindDirectXShaderCompilerDxc.cmake.Linux  FindDirectXShaderCompilerDxc.cmake.Mac  FindDirectXShaderCompilerDxc.cmake.Windows  build_config.json  build_dxc_windows.cmd  install_dxc_windows.cmd
package-system/ISPCTexComp/: Dockerfile  Dockerfile.linux  FindISPCTexComp.cmake  ISPCTexComp_36b80aa-mac-arm64.patch  ISPCTexComp_36b80aa.patch  build_config.json  build_linux.sh  build_package_image.py  build_windows.bat  docker_build_linux.sh  install_linux.sh  ispc_linux_patch_arm64.txt
package-system/Lua/: CMakeLists.txt  FindLua.cmake  FindLua.cmake.template  LICENSE.txt  build_config.json  lua_5.3.5_amzn.patch  lua_5.4.4_o3de.patch
package-system/NvCloth/: FindNvCloth.cmake  FindNvCloth.cmake.mac  build_config.json  build_mac_arm64.sh  build_package_image.py  install_mac_arm64.sh  nvcloth_mac_arm64.patch
package-system/OpenEXR/: FindImath.cmake  FindOpenEXR.cmake  Findilmbase.cmake.Linux  Findilmbase.cmake.Windows  README.md  build_config.json  o3de_openexr.patch  test_openexr_android.cmd  test_openexr_ios.sh  test_openexr_linux.sh  test_openexr_mac.sh  test_openexr_mac_3_4.sh  test_openexr_windows.cmd
package-system/OpenEXR/test/: CMakeLists.txt  atom_brdf.exr  test_openexr.cpp
package-system/OpenMesh/: FindOpenMesh.cmake.Linux  FindOpenMesh.cmake.Mac  FindOpenMesh.cmake.NonWindows  FindOpenMesh.cmake.Windows  build_config.json  build_openmesh_windows.cmd  install_openmesh_windows.cmd  openmesh-o3de.patch
package-system/OpenSSL/: .gitattributes  Dockerfile  FindOpenSSL.cmake.Linux.template  FindOpenSSL.cmake.template  FindOpenSSL_linux.cmake.template  build-linux.sh  build-mac.sh  build_config.json  build_package_image.py  docker_build_openssl.sh  enable-stdio-on-iOS.patch  install-linux.sh  set_openssl_port_to_1_1_1_b.patch  set_openssl_port_to_1_1_1_m.patch  set_openssl_port_to_1_1_1_x.patch  test-linux.sh  test_OpenSSL_android.cmd  test_OpenSSL_ios.sh  test_OpenSSL_mac.sh  test_OpenSSL_wasm32.cmd  test_OpenSSL_windows.cmd
package-system/OpenSSL/test/: CMakeLists.txt  test_OpenSSL.c
package-system/expat/test/: CMakeLists.txt  example_file.xml  test_expat.c
package-system/freetype/test/: CMakeLists.txt  test_Freetype.c
package-system/libpng/test/: CMakeLists.txt  test_png.c
package-system/mikkelsen/: CMakeLists.txt  LICENSE.txt  build_package_image.py  mikktspace.cpp
package-system/openimageio-opencolorio/test/: .gitignore  CMakeLists.txt  base_Log2-48nits_16_LUT.exr  python_tests.py  test_OpenImageIO.cpp
package-system/sdformat/test/: CMakeLists.txt  test_sdformat.cpp
package-system/squish-ccr/: CMakeLists.txt  Dockerfile.aarch64  Dockerfile.x86_64  Findsquish-ccr.cmake  Findsquish-ccr.cmake.template  LICENSE.txt  build-linux-aarch64.sh  build-linux-x86_64.sh  build-linux.sh  build-mac-arm64.sh  build_config.json  docker_build_linux.sh  package-linux.sh  squish-ccr-deb557d-mac-rev1.patch  squish-ccr-deb557d-rev1.patch
package-system/tiff/test/: CMakeLists.txt  test_tiff.c
tests/: test_invariant_get_and_build_mcpp.py
(+451 files in other folders)
